# claude-code-memory-decay

./: README.md  install.sh  pyproject.toml  validate.sh
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: pre-compact  session-end
.claude/memento/: metrics.json
.claude/skills/learned-setup-memorydecay-plugin/: SKILL.md
.claude/skills/memorydecay/: SKILL.md
docs/superpowers/plans/: 2026-03-25-claude-code-memorydecay-implementation.md
docs/superpowers/specs/: 2026-03-25-claude-code-memorydecay-design.md
src/claude_code_memorydecay/: __init__.py  cli.py  client.py  migrator.py  server_manager.py
tests/: test_cli.py  test_client.py  test_migrator.py  test_server_manager.py
