[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-memorydecay"
version = "0.2.1"
description = "Claude Code plugin for human-like memory decay"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
memorydecay = "claude_code_memorydecay.cli:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
